SERVER-12976 Check collection name length limit in userAllowedWriteNS

This should improve error messages for over-length collections. Previously
this would be checked before the collection would be created but depending on
the length, may generate a different error. It also resolves SERVER-13074 and
SERVER-13075.